--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@charset 'utf-8';
+@charset 'utf-8';ㄹ
 body{font-family: 'Noto Sans', sans-serif;}
 .clearfix:after{content:"";display:block;clear:both;}
 
@@ -12,7 +12,7 @@ body{font-family: 'Noto Sans', sans-serif;}
 .search{width:300px;height:30px;background:#fff;border-radius:15px;float:left;margin:28px 0 0 70px;}
 .search label{padding:5px 10px;line-height:30px;}
 .search input{border:none;padding:2px;margin-left:10px;}
-.logo .call{color:#fff;font-size:28px;margin:20px 0 0 50px;}
+.logo .call{color:#fff;font-size:28px;margin:20px 0 0 40px;}
 .call span{font-weight:bold;}
 .sns{width:130px;height:24px;overflow:hidden;margin:28px 0 0 60px;}
 .sns a{background:url(../images/sns.jpg);width:25px;height:25px;float:left;margin-left:6px;}
@@ -28,32 +28,57 @@ body{font-family: 'Noto Sans', sans-serif;}
 .header_menu li>a:hover{background:powderblue;}
 
 
-#content_wrap{width:100%;height:1200px;background:url(../images/01.jpg);background-size:cover;}
+#content_wrap{width:100%;height:1250px;background:url(../images/01.jpg);background-size:cover;}
 #content_wrap .content{width:980px;margin:0 auto;}
 .content .select{float:left;margin-top:55px;}
-.content .select a{display:block;text-align:center;line-height:75px;width:160px;height:75px;background:#0099cb;font-weight:bold;}
+.content .select a{display:block;text-align:center;line-height:75px;width:160px;height:75px;background:#0099cb;font-weight:bold;color:#fff;}
+.content .select a.active{background:#fff;color:#000;}
 .content .flight_book{width:322px;height:300px;background:#fff;float:left;margin-top:55px;padding:35px;}
 .content .title{padding:80px 0 0 55px;float:left;}
 .content .title h2{font-size:50px;font-weight:bold;}
 .content .title p{font-size:30px;letter-spacing:-4px;}
 
 .flight_book label{font-size:13px;}
-.flight_book select{width:110px;height:30px;border:1px solid #ddd;margin:10px 0 20px;border-radius:5px;}
+.flight_book select{width:110px;height:30px;border:1px solid #ddd;margin:2px 0 8px;border-radius:5px;}
 .flight_book #nation_sch{width:250px;}
 .flight_book .form_row>.row{float:left;margin-right:27px;}
 .flight_book .form_row>.row2{float:left;margin-right:10px;}
 .flight_book .form_row>.row2 select{width:50px;}
 .flight_book .form_row>.row:last-child{margin-right:0;}
 .flight_book .form_row>.row2:last-child{margin-right:0;}
+form button{width:250px;height:35px;background:#ea4f1f;border:none;color:#fff;border-radius:5px;margin-top:12px;}
 
 .content .hotel_book{display:none;}
 
 
 .visual_wrap{width:980px;height:760px;margin:20px auto 0;}
-.visual_wrap .row{width:980px;height:240px;margin-bottom:20px;overflow:hidden;}
-.visual_wrap .visual{width:236px;height:240px;margin-right:11.8px;background:#eee;float:left;}
+.visual_wrap .row{width:980px;height:240px;margin-bottom:20px;}
+.visual_wrap .visual{width:236px;height:240px;margin-right:11.8px;background:#eee;float:left;position:relative;overflow:hidden;}
 .visual_wrap .row>.visual:last-child{margin-right:0;}
-.visual_wrap .row .travel{position:relative;}
-.visual_wrap .visual>.trip{width:236px;height:40px;background:#152630;position:absolute;bottom:0;display:inline-block;color:#fff;}
-.visual_wrap .travel p{padding:7px 15px;}
+.visual_wrap .row .travel{position:relative;overflow:hidden;}
+.visual_wrap .row .visual img:hover{transform:scale(1.2,1.2);transition-duration:0.5s;}
+.visual_wrap .visual>.trip{width:236px;height:50px;background:#152630;position:absolute;bottom:0;display:inline-block;color:#fff;}
+.visual_wrap .travel p{padding:13px 15px;}
 .visual_wrap .travel span{padding-left:25px;color:#27cd26;}
+
+.visual_wrap .row .hotel{width:236px;height:50px;background:#529351;position:absolute;bottom:0;display:inline-block;color:#fff;padding:5px 0 0 10px;}
+.visual_wrap .row .tokyo{width:236px;height:50px;background:rgba(0,0,0,0.6);position:absolute;bottom:0;display:inline-block;color:#fff;padding:10px 0 0 10px;line-height:15px;}
+.visual_wrap .row .review{width:236px;height:50px;background:#44619d;position:absolute;bottom:0;display:inline-block;color:#fff;padding:10px 0 0 10px;line-height:15px;}
+.visual_wrap .row .star{width:83px;height:16px;}
+.visual_wrap .row .visual>p{width:236px;text-align:center;position:absolute;top:20px;color:#fff;}
+.visual_wrap .row .shunme{width:210px;position:absolute;top:10px;left:10px;}
+.visual_wrap .row .shunme>p{color:#000;letter-spacing:-1px;padding-bottom:20px;}
+.visual_wrap .row .shunme>span{color:#44619d;letter-spacing:-1px;font-size:13px;padding-bottom:5px;}
+.visual_wrap .row .tokyo span{font-size:11px;}
+.visual_wrap .row .review span{font-size:11px;}
+
+.visual_wrap .brow .visual{position:relative;}
+.visual_wrap .brow i{color:#fff;position:absolute;top:110px;left:110px;}
+.visual_wrap .brow .upinpo{width:236px;text-align:center;color:#fff;position:absolute;top:20px;letter-spacing: -0.8px}
+.visual_wrap .brow .downinpo{width:236px;text-align:center;color:#fff;position:absolute;top:140px;letter-spacing: -0.8px}
+.visual_wrap .brow h3{padding-bottom:8px;}
+
+#footer_wrap{width:980px;margin:0 auto;padding-top:20px;}
+#footer_wrap li{float:left;padding-right:15px;padding-bottom:10px;}
+#footer_wrap li>a{letter-spacing: -0.5px}
+#footer_wrap address{font-size:12px;}
