--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-@charset 'utf-8';ㄹ
+@charset 'utf-8';
 body{font-family: 'Noto Sans', sans-serif;}
 .clearfix:after{content:"";display:block;clear:both;}
 
-#header_wrap{width:100%;margin:0 auto;}
-#header_top{position:relative;height:85px;}
+#header_wrap{width:100%;margin:0 auto;position:relative;}
+#header_top{height:85px;}
 #header_top>img{width:100%;height:85px;}
 .logo_wrap{width:980px;margin:0 auto;}
 .logo{width:980px;position:absolute;top:0;}
@@ -21,11 +21,22 @@ body{font-family: 'Noto Sans', sans-serif;}
 .sns a:nth-child(4){background:url(../images/sns.jpg) -88px 0;}
 
 #header_menu_wrap{background:url(../images/main_menu_bg.jpg);height:66px;}
+#header_menu_wrap .subback{display:none;background:rgba(0,0,0,0.6);height:50px;}
 .header_menu{width:980px;margin:0 auto;}
-.header_menu li{float:left;width:163.33px;position:relative;border-left:1px solid #ddd;height:61px;}
-.header_menu li:last-child{border-right:1px solid #ddd;height:61px;}
-.header_menu li>a{display:block;line-height:66px;font-size:16px;font-weight:bold;height:61px;text-align:center;}
-.header_menu li>a:hover{background:powderblue;}
+.header_menu>li{float:left;width:163.33px;border-left:1px solid #ddd;height:61px;}
+.header_menu>li:last-child{border-right:1px solid #ddd;height:61px;}
+.header_menu>li>a{display:block;line-height:66px;font-size:16px;font-weight:bold;height:61px;text-align:center;}
+.header_menu>li>a:hover{background:powderblue;}
+.header_menu ul{width:1900px;position:absolute;padding:10px;display:none;position}
+.header_menu>li:nth-child(1) ul{left:300px;}
+.header_menu>li:nth-child(2) ul{left:400px;}
+.header_menu>li:nth-child(3) ul{left:600px;}
+.header_menu>li:nth-child(4) ul{left:750px;}
+.header_menu>li:nth-child(5) ul{left:900px;}
+.header_menu>li:nth-child(6) ul{left:1000px;}
+.header_menu ul>li{float:left;width:120px;padding:5px;}
+.header_menu ul>li>a{display:block;color:#fff;}
+.header_menu ul>li>a:hover{color:powderblue;}
 
 
 #content_wrap{width:100%;height:1250px;background:url(../images/01.jpg);background-size:cover;}
